# notifai

./: .gitignore  BATCH_09_SUMMARY.txt  COMPLETION_SUMMARY.md  GENERATION_COMPLETE.txt  MODEL_CARD.md  README.md  analyze_data.py  check_progress.sh  claude.md  functiongemma_finetuned_results.json  generate_batch_09.py  generate_remaining_batches.py  merge_batches.py  prd.md  training_data.jsonl  validate_data.py
.claude/: ralph-loop.local.md
.github/workflows/: claude-code-review.yml  claude.yml  goose-review-incremental.yml  goose-review.yml  goose.yml  opencode-review-incremental.yml  opencode-review.yml  opencode.yml
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  build_info.cpp  llama_jni.cpp
benchmarks/: CLAUDE.md  MODEL_COMPARISON.md
benchmarks/001-baseline-qwen3-0.6b/: README.md  results.json
data/: README.md  batch_01.jsonl  batch_02.jsonl  batch_03.jsonl  batch_04.jsonl  batch_05.jsonl  batch_06.jsonl  batch_07.jsonl  batch_08.jsonl  batch_09.jsonl  batch_10.jsonl  batch_11.jsonl  batch_12.jsonl  batch_13.jsonl  batch_14.jsonl  batch_15.jsonl  batch_16.jsonl  batch_17.jsonl  batch_18.jsonl  batch_19.jsonl  batch_20.jsonl  batch_21.jsonl  batch_22.jsonl  batch_23.jsonl  batch_24.jsonl  batch_25.jsonl  batch_26.jsonl  batch_27.jsonl  batch_28.jsonl  batch_29.jsonl  batch_30.jsonl  batch_31.jsonl  batch_32.jsonl  batch_33.jsonl  batch_34.jsonl  batch_35.jsonl  batch_36.jsonl  batch_37.jsonl  batch_38.jsonl  batch_39.jsonl  (+7 more)
data/raw/: batch_02.jsonl  (+16 more)
docs/: DATASET_ANALYSIS_SUMMARY.md  QUICK_STATS_CARD.txt  android_package_names.md  claude.md
models/: DOWNLOAD.md
scripts/: add_chinese_apps.py  analyze_priority_errors.py  analyze_stats.py  convert_to_functiongemma_3level.py  convert_to_functiongemma_official.py  detailed_stats.py  evaluate_functiongemma_finetuned.py  finetune_functiongemma.py  finetune_functiongemma_3level.py  fix_package_names.py  generate_missing_batches_v2.py  merge_and_convert.py  remap_priorities_3level.py  test_base_model.py  test_base_model_simple.py  test_baseline.py  test_baseline_transformers.py  test_gpu.py  validate_batch_09.py  validate_fg_hallucinations.py  validate_hallucinations.py  visualize_distributions.py
(+65 files in other folders)
